--- a/src/modules/core/components/icon/styles/icon.component.scss
+++ b/src/modules/core/components/icon/styles/icon.component.scss
@@ -7,6 +7,7 @@
     svg {
         width: var(--wlc-icon-width);
         height: var(--wlc-icon-height);
+        overflow: visible;
     }
 }
 
